feat: Implement core server with user authentication, profile management, and a matching system, including client-side support and Vercel configuration.

--- a/client/connect.html
+++ b/client/connect.html
@@ -13,6 +13,20 @@
 <body>
     <div class="app-background"></div>
 
+    <!-- Permission Start Overlay -->
+    <div id="startOverlay" class="start-overlay">
+        <div class="start-card">
+            <h2>Ready to Connect?</h2>
+            <p>Talksy needs access to your camera and microphone to match you with strangers.</p>
+            <div class="permission-icons">
+                <i class="fa-solid fa-camera"></i>
+                <i class="fa-solid fa-microphone"></i>
+            </div>
+            <button id="enableCameraBtn" class="btn-primary glow-effect">Enable Camera & Start <i
+                    class="fa-solid fa-arrow-right"></i></button>
+        </div>
+    </div>
+
     <!-- Main App UI -->
     <div class="main-container" id="mainApp">
         <div class="split-video-container">
