--- a/client/index.html
+++ b/client/index.html
@@ -18,6 +18,9 @@
         <div class="logo">
             <i class="fa-solid fa-video"></i> Talksy
         </div>
+        <button class="mobile-menu-btn" onclick="document.querySelector('.nav-links').classList.toggle('active')">
+            <i class="fa-solid fa-bars"></i>
+        </button>
         <div class="nav-links">
             <a href="index.html" class="active">Home</a>
             <a href="features.html">Features</a>
